kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: modoki-ingress
  namespace: modoki
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - hosts:
        - apps.tsuzu.xyz
      secretName: modoki-apps-cert-secret
  rules:
    - host: apps.tsuzu.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: modoki-svc
              servicePort: 80
